--- a/app/views/admin/insurance_providers/_form.html.erb
+++ b/app/views/admin/insurance_providers/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @insurance_provider do |f| %>
+<% form_for [:admin, @insurance_provider] do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :name %><br />
