--- a/app/views/layouts/admin/_tabs.html.erb
+++ b/app/views/layouts/admin/_tabs.html.erb
@@ -1,5 +1,5 @@
 <div id="tabs">
-  <%= navigation [:admin_users, t('.users')], [:admin_doctors, t('.doctors')], [:admin_lab_tests, t('.lab_tests')], [:admin_panels, t('.panels')] %>
+  <%= navigation [:admin_users, t('.users')], [:admin_doctors, t('.doctors')], [:admin_insurance_providers, t('.insurance_providers')],[:admin_lab_tests, t('.lab_tests')], [:admin_panels, t('.panels')] %>
 </div>
 
 <% flash.each do |name, msg| %>
