--- a/app/views/admin/insurance_providers/show.html.erb
+++ b/app/views/admin/insurance_providers/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <%= link_to "Edit", edit_insurance_provider_path(@insurance_provider) %> |
-  <%= link_to "Destroy", @insurance_provider, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", insurance_providers_path %>
+  <%= link_to "Edit", edit_admin_insurance_provider_path(@insurance_provider) %> |
+  <%= link_to "Destroy", [:admin, @insurance_provider], :confirm => 'Are you sure?', :method => :delete %> |
+  <%= link_to "View All", admin_insurance_providers_path %>
 </p>
