--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,24 +1,18 @@
 <% labeled_form_for @user do |f| %>
-  <fieldset class="remote">
+  <fieldset>
     <%= f.error_messages %>
-    <div class="section">
-      <%= f.text_field :username, :label => t('.username'), :required => true %>
-      <%= f.text_field :initials, :label => t('.initials'), :required => true %>
-      <%= f.select :language, [['Español', 'es'], ['English','en']], :label => t('.language') %>
-      <%= f.password_field :password, :label => t('.password') %>
-      <%= f.password_field :password_confirmation, :label => t('.password_confirmation') %>
-      <%= f.check_box :admin, :label => t('.admin') %>
-    </div>
-    <div class="subtitle">
-      <%= t('.personal_information') %>
-    </div>
-    <div class="section">
-      <%= f.text_field :prefix, :label => t('.prefix') %>
-      <%= f.text_field :first_name, :label => t('.first_name'), :required => true %>
-      <%= f.text_field :last_name, :label => t('.last_name'), :required => true %>
-      <%= f.text_field :suffix, :label => t('.suffix') %>
-      <%= f.text_field :email, :label => t('.email') %>
-    </div>
+    <%= f.text_field :username, :label => t('.username'), :required => true %>
+    <%= f.text_field :initials, :label => t('.initials'), :required => true %>
+    <%= f.select :language, [['Español', 'es'], ['English','en']], :label => t('.language') %>
+    <%= f.password_field :password, :label => t('.password') %>
+    <%= f.password_field :password_confirmation, :label => t('.password_confirmation') %>
+    <%= f.check_box :admin, :label => t('.admin') %>
+    <h2><%= t('.personal_information') %></h2>
+    <%= f.text_field :prefix, :label => t('.prefix') %>
+    <%= f.text_field :first_name, :label => t('.first_name'), :required => true %>
+    <%= f.text_field :last_name, :label => t('.last_name'), :required => true %>
+    <%= f.text_field :suffix, :label => t('.suffix') %>
+    <%= f.text_field :email, :label => t('.email') %>
     <div class="buttonbar">
       <%= f.submit t('.submit') %> <%= t('.or') %> <%= link_to t('.cancel'), patients_path %>
     </div>
