Improved Requisitions' View

--- a/app/views/accessions/index.js.erb
+++ b/app/views/accessions/index.js.erb
@@ -1,1 +1,1 @@
-$("#accessions").html("<%= escape_javascript(render("accessions")) %>")
+$("#requisitions").html("<%= escape_javascript(render("accessions")) %>")
