--- a/app/views/results/_result.html.erb
+++ b/app/views/results/_result.html.erb
@@ -1,7 +1,7 @@
 <tr class="<%= cycle("even", "odd", :name => "alternating_row_colors") %>">
-  <td><%=h result.lab_test.name %></td>
+  <td class="lab_test"><%=h result.lab_test.name %></td>
   <td class="<%= result.flag_color %>"><%=h result.formatted_value %><%=h " ⚑" if result.flag %></td>
-  <td><%=h result.units%></td>
+  <td class="units"><%=h result.units%></td>
   <td class="range_min"><%=h result.range_min %></td>
   <td class="range_interval_symbol"><%=h result.range_interval_symbol %></td>
   <td class="range_max"><%=h result.range_max %></td>
