--- a/app/views/accessions/_accession.html.erb
+++ b/app/views/accessions/_accession.html.erb
@@ -1,20 +1,30 @@
-<div class="requisition">
-  <tr class="task">
-    <td>
-      <% unless accession.reported_at %>
-        <div class="strip">Pending</div>
+<li class='contact'>
+  <div class="tools" style="display:none">
+    <small>
+      <% if accession.reported_at %>
+        <%= link_to t('.change_results'), edit_results_accession_url(accession) %> |
+      <% else %>
+        <%= link_to t('.enter_results'), edit_results_accession_url(accession) %> |
       <% end %>
-    </td>
-    <td><%=link_to accession.id, accession_results_path(accession) %></td>
-    <td><%=h accession.drawn_at.strftime('%e/%m/%Y %l:%m%p') %></td>
-    <td><%=h User.find(accession.drawn_by).initials if accession.drawn_by %></td>
-    <td><%=h accession.reported_at.strftime('%e/%m/%Y %l:%m%p') if accession.reported_at %></td>
-    <td><%=h accession.patient.full_name unless @patient %></td>
-    <td><%=h accession.doctor.name if accession.doctor %></td>
-    <td><%=h truncate(accession.order_list, :length => 30) %></td>
-    <td>
-      <small><%= link_to "Change Order", edit_accession_path(accession) %></small>
-      <small><%= link_to "Delete", accession, :confirm => 'Are you sure?', :method => :delete %></small>
-    </td>
-  </tr>
-</div>
+      <%= link_to t('.change_requisition'), edit_accession_path(accession)  %>
+      <% if @current_user.admin? %>
+        | <%= link_to t('.delete?'), accession, :method => :delete, :confirm => t('.confirm_destroy') %>
+      <% end %>
+    </small>
+  </div>
+  <%= link_to "Accession ##{accession.id}", accession_path(accession) %>
+  <tt><%=h accession.patient.full_name unless @patient %></tt>
+  <dt style='padding: 2px 0px 0px 0px'>
+    <% if accession.reported_at %>
+      Reported at: <b><%=h accession.reported_at.strftime('%b %e %Y %l:%m%p') %></b>
+      by: <b><%=h User.find(accession.reported_by).initials if accession.reported_by %></b>
+    <% else %>
+      Extracted at: <b><%=h accession.drawn_at.strftime('%b %e %Y %l:%m%p') %></b>
+      by: <b><%=h User.find(accession.drawn_by).initials if accession.drawn_by %></b>
+    <% end %>
+    <% unless accession.doctor_id.blank? %>
+      | <%= t('.ordered_by') %> <b> Dr. <%=h accession.doctor.name %></b>
+    <% end %>
+    | Tests Ordered: <b><%=h truncate(accession.order_list, :length => 30) %></b>
+  </dt>
+</li>
