--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -26,10 +26,10 @@ body.login {
 	padding: 3px 10px;
 	font-size: 12px;
 	color: #fff;
-  background-color: #f40011;
+  background-color: #513059;
 	border-width: 1px;
 	border-style: solid;
-  border-color: #f40011;
+  border-color: #513059;
 	-moz-border-radius: 4px;
 	-khtml-border-radius: 4px;
 	-webkit-border-radius: 4px;
@@ -47,7 +47,7 @@ body.login {
 }
  
 h1 a {
-	background: url(/images/logo.png) no-repeat top center;
+	background: url(/images/logo.png) no-repeat center center;
 	width: 326px;
 	height: 130px;
 	text-indent: -9999px;
