--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -330,6 +330,11 @@ table {
     border: none;
     background-color: #e5e5e5; }
 
+span.handle {
+  font-size: 12px;
+  cursor: move;
+  color: #777; }
+
 .standalone {
   background: whitesmoke;
   border: 20px lightsteelblue solid;
