--- a/app/views/accessions/_form.html.erb
+++ b/app/views/accessions/_form.html.erb
@@ -4,17 +4,17 @@
 <fieldset>
   <% labeled_form_for [@patient, @accession] do |f| %>
     <%= f.error_messages %>
-    <h2>Order Details</h2>
+    <h2><%= t('.order_details') %></h2>
     <%= f.text_field :doctor_name, :label => t('.doctor') %>
     <%= f.text_field :drawn_at, :label => t('.drawn_at') %>
     <%= f.collection_select :drawn_by, User.all, :id, :username, :label => t('.drawn_by') %>
     <%= f.text_field :received_at, :label => t('.received_at') %>
     <%= f.collection_select :received_by, User.all, :id, :username, :label => t('.received_by') %>
-    <h2>Order Panels</h2>
+    <h2><%= t('.order_panels') %></h2>
     <div id="panels">
       <%= f.many_check_boxes :panel_ids, Panel.all, :id, :name %>
     </div>
-    <h2>Order Tests</h2>
+    <h2><%= t('.order_tests') %></h2>
     <div id="order_tests">
       <ul>
         <% for department in @departments %>
