--- a/app/views/accessions/index.html.erb
+++ b/app/views/accessions/index.html.erb
@@ -1,8 +1,8 @@
-<% title "Requisitions for Patient" %>
+<% title t('.title') %>
 
 <% if @patient %>
   <div class='title_tools'>
-    <%= link_to "Order Tests", new_patient_accession_path(@patient) %>
+    <%= link_to t('.order_tests'), new_patient_accession_path(@patient) %>
   </div>
   <div class='title'><%=h @patient.full_name if @patient %></div>
 <% end %>
