--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,12 +4,12 @@
       <span><%=h @current_user.name_to_display %></span>
       <span>&nbsp;&nbsp;</span>
       
-      <%= link_to ("Quick find", "#", :id => "jumper") %> |
-      <%= link_to "Profile", profile_path %> |
+      <%= link_to (t('.quick_find'), "#", :id => "jumper") %> |
+      <%= link_to t('.profile'), profile_path %> |
       <% if @current_user.admin? %>
-        <%= link_to "Admin", admin_path %> |
+        <%= link_to t('.admin'), admin_path %> |
       <% end %>
-      <%= link_to "Logout", logout_path %>
+      <%= link_to t('.logout'), logout_path %>
       <%= render "layouts/jumpbox" %>
     <% else %>
       <%= link_to "Login", login_path %> |
