--- a/app/views/accessions/_accessions.html.erb
+++ b/app/views/accessions/_accessions.html.erb
@@ -7,7 +7,8 @@
   <% end %>
 
   <% if @reported_accessions.blank? %>
-    No requisitions yet. <%= link_to t('.order_tests'), new_patient_accession_path(@patient) %>
+    <%= t('.no_requisitions_yet') %><br />
+    <%= link_to t('.order_tests'), new_patient_accession_path(@patient) %>
   <% else %>
     <h3 class="due_today"><%= t('.requisition_history') %></h3>
     <ul>
