Fixed admin panel

--- a/app/views/admin/departments/edit.html.erb
+++ b/app/views/admin/departments/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render :partial => 'form' %>
 
 <p>
-  <%= link_to "View All", departments_path %>
+  <%= link_to "View All", admin_departments_path %>
 </p>
