--- a/app/views/admin/lab_test_values/new.html.erb
+++ b/app/views/admin/lab_test_values/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'form' %>
 
-<p><%= link_to "Back to List", lab_test_values_path %></p>
+<p><%= link_to "Back to List", admin_lab_test_values_path %></p>
