--- a/app/views/admin/units/_form.html.erb
+++ b/app/views/admin/units/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @unit do |f| %>
+<% form_for [:admin, @unit] do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :name %><br />
