--- a/app/views/admin/units/edit.html.erb
+++ b/app/views/admin/units/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render :partial => 'form' %>
 
 <p>
-  <%= link_to "Show", @unit %> |
-  <%= link_to "View All", units_path %>
+  <%= link_to "Show", [:admin, @unit] %> |
+  <%= link_to "View All", admin_units_path %>
 </p>
