--- a/app/views/admin/lab_test_values/_form.html.erb
+++ b/app/views/admin/lab_test_values/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @lab_test_value do |f| %>
+<% form_for [:admin, @lab_test_value] do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :value %><br />
