--- a/app/views/admin/lab_test_values/edit.html.erb
+++ b/app/views/admin/lab_test_values/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render :partial => 'form' %>
 
 <p>
-  <%= link_to "Show", @lab_test_value %> |
-  <%= link_to "View All", lab_test_values_path %>
+  <%= link_to "Show", [:admin, @lab_test_value] %> |
+  <%= link_to "View All", admin_lab_test_values_path %>
 </p>
