--- a/app/views/admin/lab_test_values/index.html.erb
+++ b/app/views/admin/lab_test_values/index.html.erb
@@ -11,11 +11,11 @@
       <td><%=h lab_test_value.value %></td>
       <td><%=h lab_test_value.flag %></td>
       <td><%=h lab_test_value.note %></td>
-      <td><%= link_to "Show", lab_test_value %></td>
-      <td><%= link_to "Edit", edit_lab_test_value_path(lab_test_value) %></td>
-      <td><%= link_to "Destroy", lab_test_value, :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to "Show", [:admin, lab_test_value] %></td>
+      <td><%= link_to "Edit", edit_admin_lab_test_value_path(lab_test_value) %></td>
+      <td><%= link_to "Destroy", [:admin, lab_test_value], :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
   <% end %>
 </table>
 
-<p><%= link_to "New Lab Test Value", new_lab_test_value_path %></p>
+<p><%= link_to "New Lab Test Value", new_admin_lab_test_value_path %></p>
