--- a/app/views/admin/lab_test_values/show.html.erb
+++ b/app/views/admin/lab_test_values/show.html.erb
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-  <%= link_to "Edit", edit_lab_test_value_path(@lab_test_value) %> |
-  <%= link_to "Destroy", @lab_test_value, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", lab_test_values_path %>
+  <%= link_to "Edit", edit_admin_lab_test_value_path(@lab_test_value) %> |
+  <%= link_to "Destroy", [:admin, @lab_test_value], :confirm => 'Are you sure?', :method => :delete %> |
+  <%= link_to "View All", admin_lab_test_values_path %>
 </p>
