--- a/app/views/admin/units/new.html.erb
+++ b/app/views/admin/units/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'form' %>
 
-<p><%= link_to "Back to List", units_path %></p>
+<p><%= link_to "Back to List", admin_units_path %></p>
