--- a/app/views/admin/units/show.html.erb
+++ b/app/views/admin/units/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <%= link_to "Edit", edit_unit_path(@unit) %> |
-  <%= link_to "Destroy", @unit, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", units_path %>
+  <%= link_to "Edit", edit_admin_unit_path(@unit) %> |
+  <%= link_to "Destroy", [:admin, @unit], :confirm => 'Are you sure?', :method => :delete %> |
+  <%= link_to "View All", admin_units_path %>
 </p>
