--- a/app/views/accessions/show.html.erb
+++ b/app/views/accessions/show.html.erb
@@ -9,6 +9,9 @@
         <%= render results %>
       </tbody>
     </table>
+    <br /><em>Notes:</em>
+      Notes here if any...<br />
+      <br />
   <% end %>
 
   <div class="buttonbar">
